add job events
